--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,6 +1,6 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
+name: Inwind 
+avatar: /static/images/avatar.jpg
 occupation: Professor of Atmospheric Science
 company: Stanford University
 email: address@yoursite.com
