--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -8,6 +8,10 @@ wechat: https://cdn.liujicoding.top/blog/wechat-qrcode.jpg
 github: https://github.com/coderLgee
 ---
 
-多抹（你好），我是故居风，一名表面上是前端的啥都 ~~想~~ 干工程师，爱好是~~唱跳rap 打篮球~~，最近在健身。平时喜欢研究各种技术，比如前端的各种框架、微信平台、后端、运维或多或少都有所了解，
-，比较有脑洞。这个博客就是其中作品之一，想法是很久之前就有了，不过过程中也是处处踩坑，迭代了三版花了挺多时间的。
+多抹（你好），我是故居风，一名表面上是前端的啥都（想）干工程师，爱好是~~唱跳rap 打篮球~~，最近在健身。平时喜欢研究各种技术，比如前端的各种框架、微信平台、后端、运维或多或少都有所了解，
+比较有脑洞。这个博客就是其中作品之一，不过过程中也是处处踩坑，终于新的一版又上线了！！。
+
+写一个博客网站在我眼里是一件很酷的事情，但最终的目的还是为了分享开发过程，一方面是想记录一下，另一方面也希望我这些文章能给大家带来帮助。
+
+三人行必有我师，后续会开发评论区，大家可以讨论指教。
 
