--- a/data/blog/2023-9/weixinxiaochengxudiwebViewfangan.mdx
+++ b/data/blog/2023-9/weixinxiaochengxudiwebViewfangan.mdx
@@ -9,5 +9,6 @@
 项目一直针对是`H5`&`微信公众号`平台开发，可是突然下来了个需求说要在小程序平台上线，我真的栓Q，那么唯一的方案就是小程序内嵌H5了，也就是使用小程序的`webView`。
 
 ### 什么是webView?
+我把他理解成微信小程序平台中类似`iframe`标签的组件。他们都有相同的功能，那就是
 
   
