--- a/data/blog/2023-9/weixinxiaochengxudiwebViewfangan.mdx
+++ b/data/blog/2023-9/weixinxiaochengxudiwebViewfangan.mdx
@@ -9,6 +9,20 @@
 项目一直针对是`H5`&`微信公众号`平台开发，可是突然下来了个需求说要在小程序平台上线，我真的栓Q，那么唯一的方案就是小程序内嵌H5了，也就是使用小程序的`webView`。
 
 ### 什么是webView?
-我把他理解成微信小程序平台中类似`iframe`标签的组件。他们都有相同的功能，那就是
+我把他理解成微信小程序平台中类似`iframe`标签的组件。他们都有相同的功能，那就是他们都可以通过网页地址将其嵌入到当前网页/小程序。
+
+但不同的是：
+* `webView`可以通过微信的JSSDK与外部通信，而`iframe`无法与外部通信
+* `webView`被小程序限制只能使用小程序后台配置的业务域名，而`iframe`只要浏览器能访问都可以使用
+
+
+### webView的应用
+这个使用起来相当的简单，你只需要新建一个小程序，在后台完成相关的配置，然后使用webView链上网页地址：
+```
+<view class="container">
+    <web-view src="https://xxx.com"/>
+</view>
+```
+值得注意的是，如何你的H5网页使用过JSSDK，也就是公众号网页，那么在应用的时候会导致一些开发功能无法使用，因为小程序webView中只支持部分的SDK接口
 
   
