chore(ci): blog sync

--- a/data/blog/2023-9/weixinxiaochengxudiwebViewfangan.mdx
+++ b/data/blog/2023-9/weixinxiaochengxudiwebViewfangan.mdx
@@ -23,7 +23,7 @@
     <web-view src="https://xxx.com"/>
 </view>
 ```
-值得注意的是，如何你的H5网页使用过JSSDK，也就是公众号网页，那么在应用的时候会导致一些开发功能无法使用，因为小程序`webView`中只支持<a src="https://developers.weixin.qq.com/miniprogram/dev/component/web-view.html">部分的SDK接口</a> 部分的SDK接口：
+值得注意的是，如何你的H5网页使用过JSSDK，也就是公众号网页，那么在应用的时候会导致一些开发功能无法使用，因为小程序`webView`中只支持<a href="https://developers.weixin.qq.com/miniprogram/dev/component/web-view.html">部分的SDK接口</a>：
 ![webView支持的SDK接口](https://github.com/coderInwind/inwindBlog/assets/91716457/80cbb124-da2f-4751-b50c-78393b34df47)
 
   
