--- a/data/blog/2023-9/weixinxiaochengxudiwebViewfangan.mdx
+++ b/data/blog/2023-9/weixinxiaochengxudiwebViewfangan.mdx
@@ -2,11 +2,10 @@
   title: 微信小程序的webView方案
   date: 2023-10-14T14:47:43Z
   summary:
-  tags: []
+  tags: ["Vue","Wx"]
 ---
   
-  ### Discussed in https://github.com/coderInwind/inwindBlog/discussions/20
-
+  
 <div type='discussions-op-text'>
 
 <sup>Originally posted by **coderInwind** October  5, 2023</sup>
