--- a/data/blog/2023-9/weixinxiaochengxudiwebViewfangan.mdx
+++ b/data/blog/2023-9/weixinxiaochengxudiwebViewfangan.mdx
@@ -5,12 +5,11 @@
   tags: ["Vue","Wx"]
 ---
   
-  
-<div type='discussions-op-text'>
+  <div type='discussions-op-text'>
 
 <sup>Originally posted by **coderInwind** October  5, 2023</sup>
 ### 前言
-项目一直针对是`H5`&`微信公众号`平台开发，可是突然下来了个需求说要在小程序平台上线，我真的栓Q，那么最便捷的方案就是小程序内嵌H5了，也就是使用小程序的`webView`。
+项目一直针对是`H5`&`微信公众号`平台开发，可是突然下来了个需求说要在小程序平台上线，我真的栓Q。技术栈使用的是Vue3，因为当时并没有计划做跨平台，所以没有选择uni-app、tora之类的跨平台框架，那么目前最便捷的方案就是小程序内嵌H5了，也就是使用小程序的`webView`。
 
 ### 什么是webView?
 我把他理解成微信小程序平台中类似`iframe`标签的组件。他们都有相同的功能，那就是他们都可以通过网页地址将其嵌入到当前网页/小程序。
