chore(ci): blog sync

--- a/data/blog/2023-9/liulanqidiaoyongmaikefengquanxianshixianyuyinshurugongneng.mdx
+++ b/data/blog/2023-9/liulanqidiaoyongmaikefengquanxianshixianyuyinshurugongneng.mdx
@@ -6,5 +6,11 @@
 ---
   
   ### 前言
-今天收到一个需求：在聊天对话的时候，除了打字输入，还要让用户能语音输入，我使用到了浏览器的相关的API、阿里云的语音转换API，
+今天收到一个需求：在一个聊天室场景中，除了用户除了打字输入，还要求能语音输入，实现这个需求我使用到了浏览器的相关的API、阿里云的语音转换API。
+![image](https://github.com/coderInwind/inwindBlog/assets/91716457/a1fccca7-bbdb-4656-903a-0e876312e8ee)
+
+### 采集音频
+首先我们得采集到用户说的话，实现这个得使用到两个浏览器的API，第一个是<a href="https://developer.mozilla.org/zh-CN/docs/Web/API/MediaDevices/getUserMedia" target="_blank">MediaDevices.getUserMedia()</a> MediaDevices.getUserMedia()
+
+
   
