--- a/data/blog/2023-9/liulanqidiaoyongmaikefengquanxianshixianyuyinshurugongneng.mdx
+++ b/data/blog/2023-9/liulanqidiaoyongmaikefengquanxianshixianyuyinshurugongneng.mdx
@@ -10,7 +10,7 @@
 ![image](https://github.com/coderInwind/inwindBlog/assets/91716457/a1fccca7-bbdb-4656-903a-0e876312e8ee)
 
 ### 采集音频
-首先我们得采集到用户说的话，实现这个得使用到两个浏览器的API，第一个是<a href="https://developer.mozilla.org/zh-CN/docs/Web/API/MediaDevices/getUserMedia" target="_blank">MediaDevices.getUserMedia()</a> MediaDevices.getUserMedia()
+首先我们得采集到用户说的话，实现这个得使用到两个浏览器的API，第一个是<a href="https://developer.mozilla.org/zh-CN/docs/Web/API/MediaDevices/getUserMedia" target="_blank">MediaDevices.getUserMedia()</a> `MediaDevices.getUserMedia()`会提示用户给予使用媒体输入的许可，媒体输入会产生一个[MediaStream](https://developer.mozilla.org/zh-CN/docs/Web/API/MediaStream)，里面包含了请求的媒体类型的轨道。此流可以包含一个视频轨道（来自硬件或者虚拟视频源，比如相机、视频采集设备和屏幕共享服务等等）、一个音频轨道（同样来自硬件或虚拟音频源，比如麦克风、A/D 转换器等等），也可能是其他轨道类型。
 
 
   
