chore(ci): blog sync

--- a/data/blog/2023-9/JSerjinzhishujudichuli：qianxiBlob、ArrayBuffer、File、Buffer.mdx
+++ b/data/blog/2023-9/JSerjinzhishujudichuli：qianxiBlob、ArrayBuffer、File、Buffer.mdx
@@ -27,6 +27,15 @@ const blob = new Blob([array],"text/html")
 
 
 ### Flie
-`File`继承了`Blob`的所有属性，可以看成一个特殊的`Blob`
+`File`继承了`Blob`的所有属性，可以看成一个特殊的`Blob`，且可以用在任意的 Blob 类型的 context 中。比如说， [FileReader](https://developer.mozilla.org/zh-CN/docs/Web/API/FileReader), [URL.createObjectURL()](https://developer.mozilla.org/zh-CN/docs/Web/API/URL/createObjectURL_static), [createImageBitmap()](https://developer.mozilla.org/en-US/docs/Web/API/createImageBitmap), 及 [XMLHttpRequest.send()](https://developer.mozilla.org/zh-CN/docs/Web/API/XMLHttpRequest#send()) 都能处理 Blob 和 File。
+
+从常见的来看，我们通过`input`标签上传一个文件，得到的就是一个`File`
+
+
+### ArrayBuffer
+`ArrayBuffer` 对象用来表示通用的、固定长度的原始二进制数据缓冲区。
+它是一个字节数组，通常在其他语言中称为“byte array”。你不能直接操作 ArrayBuffer 中的内容；而是要通过[类型化数组对象](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/TypedArray)或 [DataView](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/DataView) 对象来操作，它们会将缓冲区中的数据表示为特定的格式，并通过这些格式来读写缓冲区的内容。
+
+[ArrayBuffer()](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/ArrayBuffer/ArrayBuffer) 构造函数创建一个以字节为单位的给定长度的新 ArrayBuffer。你也可以从现有的数据（例如，从 [Base64](https://developer.mozilla.org/zh-CN/docs/Glossary/Base64) 字符串或者[从本地文件](https://developer.mozilla.org/zh-CN/docs/Web/API/FileReader/readAsArrayBuffer)）获取数组缓冲区。
 
   
