--- a/data/blog/2023-9/shiyongWebScoketshixianliaotianshi.mdx
+++ b/data/blog/2023-9/shiyongWebScoketshixianliaotianshi.mdx
@@ -62,7 +62,10 @@ chatState.ttsInstance.onmessage = async (res) => {
     
 };
 ```
-我们把接收到的一段段`Blob`数据传给player实例的feed方法，但需要注意的是只接收`TypedArray`类型或`ArrayBuffer`类型，等待缓冲完毕之后音频就会播放出来了，这些属性类型有些同学可能会觉得陌生，他们都是是处理二进制数据必不可少了，
+我们把接收到的一段段`Blob`数据传给player实例的feed方法，但需要注意的是只接收`TypedArray`类型或`ArrayBuffer`类型，等待缓冲完毕之后音频就会播放出来了，这些属性类型有些同学可能会觉得陌生，他们都是是处理二进制数据必不可少了，在下篇文章我会将使用到的二进制对象和他们直接如何转化的相关内容整理到一起。
+
+等你实现了功能后，你就会发现，坑爹的包连个播放开始钩子都没有，播放结束钩子`onended`也不准，播放长语音的时候播放到中通就调用了。看来想偷懒少读代码也是件难事，我们展开看看这个包，写的挺好的
+
 
 
 
