chore(ci): blog sync

--- a/data/blog/2023-9/shiyongWebScoketshixianliaotianshi.mdx
+++ b/data/blog/2023-9/shiyongWebScoketshixianliaotianshi.mdx
@@ -270,7 +270,9 @@ class PCMPlayer {
 
 export default PCMPlayer
 ```
+并没有那么难懂，建议结合着MDN看，里面并没有我想要的钩子，所以我自己动手在外部实现了。
 
+首先是`onended`，读完源码之后了解到了其内部回调的`onended`，钩子并不一定是整个音频的钩子，也可能是一段音频的钩子，所以才会出现有多次的`onended`回调，那么如何监听的整个音频播放完毕呢？我是这样处理的
 
 
 
