chore(ci): blog sync

--- a/data/blog/2023-9/JSerjinzhishujudichuli：qianxiBlob、ArrayBuffer、File、Buffer.mdx
+++ b/data/blog/2023-9/JSerjinzhishujudichuli：qianxiBlob、ArrayBuffer、File、Buffer.mdx
@@ -2,7 +2,7 @@
   title: JS二进制数据的处理：浅析Blob、ArrayBuffer、File、Buffer
   date: 2023-10-24T06:27:57Z
   summary:
-  tags: []
+  tags: ["JavaScript"]
 ---
   
   ### 前言
