--- a/data/blog/2023-9/shiyongWebScoketshixianliaotianshi.mdx
+++ b/data/blog/2023-9/shiyongWebScoketshixianliaotianshi.mdx
@@ -289,6 +289,7 @@ const onPlayerEnd = (e) => {
 
 其次是`onstarted`，经过我的测试，无论是在弱网环境还是长语言的情况下，播放语言加载的时间差不多在1s左右：
 ![image](https://github.com/coderInwind/inwindBlog/assets/91716457/799e063a-8a19-4152-bc1c-94fd96e629f7)
+所以直接就用了一个一秒钟的定时器解决，大家有好的方法可以发到评论区交流交流。
 
 
   
