chore(ci): blog sync

--- a/data/blog/2023-10/JSerjinzhishujudichuli：qianxiBlob、ArrayBuffer、File、Buffer.mdx
+++ b/data/blog/2023-10/JSerjinzhishujudichuli：qianxiBlob、ArrayBuffer、File、Buffer.mdx
@@ -53,6 +53,7 @@ const blob = new Blob([array],"text/html")
 这就是基本的使用，我们可以设置8-bit、16-bit、32-bit、64-bit的写入和读取，设置写入的偏移量，需要注意的是64-bit数据的类型得是大数（bigint）。
 
 #### 使用TypedArray操作
+它会有数个类提供给我们操作数据：
 ```
 const buffer = new ArrayBuffer(16)
 
