chore(ci): blog sync

--- a/data/blog/Vueyuanma——mobanbianyi（ba）.mdx
+++ b/data/blog/Vueyuanma——mobanbianyi（ba）.mdx
@@ -99,7 +99,7 @@ export function parseText (
   }
 }
 ```
-模板文本为：`<div>姓名：[name]；年龄：[age]</div>`
+模板文本为：```<div>姓名：[name]；年龄：[age]</div>```
 解析后的返回值形如：
 ```
 {
