chore(ci): blog sync

--- a/data/blog/diedaiqiheshengchengqi.mdx
+++ b/data/blog/diedaiqiheshengchengqi.mdx
@@ -9,7 +9,7 @@
 迭代器（iterator）能让我们在某个数据结构上进行遍历的对象
 在 JavaScript 中，迭代器是一个对象，它定义一个序列，并在终止时可能返回一个返回值。 更具体地说，迭代器是通过使用 next() 方法实现迭代器协议（Iterator protocol）的任何一个对象，该方法为无参数或者一个参数的函数
 该方法返回具有两个属性的对象： value，这是序列中的 next 值；和 done ，如果已经迭代到序列中的最后一个值，则它为 true 。如果 value 和 done 一起存在，则它是迭代器的返回值。
-一旦创建，迭代器对象可以通过重复调用next（）显式地迭代。 迭代一个迭代器被称为消耗了这个迭代器，因为它通常只能执行一次。 在产生终止值之后，next（）返回{done：true}。
+一旦创建，迭代器对象可以通过重复调用next（）显式地迭代。 迭代一个迭代器被称为消耗了这个迭代器，因为它通常只能执行一次。 在产生终止值之后，next（）返回`{done：true}`。
 ```
 //实现一个迭代器
 const arr = ['aaa','bbb','ccc','ddd']
