chore(ci): blog sync

--- a/data/blog/liulanqidiaoyongmaikefengquanxianshixianyuyinshurugongneng.mdx
+++ b/data/blog/liulanqidiaoyongmaikefengquanxianshixianyuyinshurugongneng.mdx
@@ -5,11 +5,11 @@
   tags: ["WebAPI"]
 ---
   
-  ### 前言
+  ## 前言
 今天收到一个需求：在一个聊天室场景中，除了用户除了打字输入，还要求能语音输入，实现这个需求我使用到了浏览器的相关的API、阿里云的语音转换API。
 ![image](https://github.com/coderInwind/inwindBlog/assets/91716457/a1fccca7-bbdb-4656-903a-0e876312e8ee)
 
-### 采集音频
+## 采集音频
 首先我们得采集到用户说的话，实现这个得使用到两个浏览器的API，第一个是<a href="https://developer.mozilla.org/zh-CN/docs/Web/API/MediaDevices/getUserMedia" target="_blank">MediaDevices.getUserMedia()</a> `MediaDevices.getUserMedia()`会提示用户给予使用媒体输入的许可，媒体输入会产生一个[MediaStream](https://developer.mozilla.org/zh-CN/docs/Web/API/MediaStream)，里面包含了请求的媒体类型的轨道。此流可以包含一个视频轨道（来自硬件或者虚拟视频源，比如相机、视频采集设备和屏幕共享服务等等）、一个音频轨道（同样来自硬件或虚拟音频源，比如麦克风、A/D 转换器等等），也可能是其他轨道类型。
 
 通俗的来讲，就是可以拉取获取用户媒体权限的弹框，在用户通用后获取一个流。值得注意的是：在实现的过程中这个弹框的触发在各个浏览器中是不同的，在苹果的safari浏览器中获取权限框被用户拒绝后依旧能再次触发，但在某些安卓浏览器中权限框被拒绝后就会维持拒绝状态不会被触发；第二，获取权限和用户语音输入的时机最好错开，作者要实现的交互是按住进行语音输入，松开发送，但某些安卓浏览器在触发获取权限弹窗时会将`touchend`事件的图层覆盖掉，使之不能触发。需要注意的是这个API想要使用有诸多限制，首先只能在https协议下使用，其次使用的设备要有相关的媒体硬件，最后就是需要授权了。                         
@@ -51,7 +51,7 @@ speechState.recordInstance.onstop = () => {
 ```
 
 
-### 转化音频
+## 转化音频
 这一步我们选用了阿里云的语音转化接口，但作者在写的时候没有弄清楚阿里云接口所接收的格式，所以卡了很久：
 ```
 // 上传语音
@@ -88,11 +88,11 @@ wav是一种无损的音频文件格式，WAV符合 PIFF(Resource Interchange Fi
 
 简单的来说，PCM 就是比 WAV 少一个文件头，因此你可以将他们互相转化。
 
-### 发送音频
+## 发送音频
 其实到这里我们的功能差不多已经实现，接下来就是通过`WebSocket`发送，我就不多赘述了。
 
 
-### 总结
+## 总结
 这个需求完成的过程中的三个重点分别是：不同浏览器获取权限的适配、语音流的获取处理、不同语音格式的区分和转化。
 
 
