chore(ci): blog sync

--- a/data/blog/bendiyuliulanqishijianpianchawenti.mdx
+++ b/data/blog/bendiyuliulanqishijianpianchawenti.mdx
@@ -5,5 +5,9 @@
   tags: []
 ---
   
-  **一份耕耘，一份收获**
+  ## 关于Timeout
+前端伙伴应该都知道，通常配置请求的时候都有一个timeout字段，代表请求在指定的时间未响应就抛出一个错误，但是为了实现某些后端安全的需求，服务端其实也会有一个timeout，请求里会携带到一个里面含有时间戳的加密信息，后端会拿这个时间戳和服务器的时间戳比对进行timeout。
+
+## 遇到的问题
+现在从后端的日志里看在某些时候
   
